# no-std-xml

./: Cargo.toml  README.md
src/: escape.rs  reader.rs  util.rs
src/reader/: config.rs  error.rs  lexer.rs  parser.rs
src/writer/: emitter.rs
tests/: event_writer.rs
