[package]
name = "no-std-xml"
version = "0.8.20"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT"
description = "An XML library in pure Rust"
repository = "https://github.com/6d7a/xml-no-std"
homepage = "https://lib.rs/crates/xml-no-std"
documentation = "https://docs.rs/xml-no-std/"
readme = "README.md"
keywords = ["xml", "parser", "sax", "parsing", "writer"]
categories = ["parser-implementations", "no-std"]
edition = "2021"
rust-version = "1.58"
include = ["src/**", "LICENSE", "README.md"]

[badges]
maintenance = { status = "actively-developed" }
